--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     },
     "devDependencies": {
         "@babel/preset-react": "^7.16.7",
+        "@fortawesome/fontawesome-svg-core": "^6.1.1",
+        "@fortawesome/free-solid-svg-icons": "^6.1.1",
+        "@fortawesome/react-fontawesome": "^0.1.18",
         "@headlessui/react": "^1.4.2",
         "@inertiajs/inertia": "^0.11.0",
         "@inertiajs/inertia-react": "^0.8.0",
